fixes layout issues

--- a/app/assets/stylesheets/bootstrap-tagsinput.css
+++ b/app/assets/stylesheets/bootstrap-tagsinput.css
@@ -9,7 +9,7 @@ button.run {
 }
 
 .search-tags {
-  width: 80%;
+  margin: 10px 15%;
   background-color: #E0E0E0;
 }
 
