--- a/app/assets/stylesheets/light-bootstrap-dashboard.css
+++ b/app/assets/stylesheets/light-bootstrap-dashboard.css
@@ -1,6 +1,7 @@
 /*custom elements */
 .dropdown-options {
-width: 80%;
+margin: 10px 15%;
+background-color: #E0E0E0;
 background-color: #E0E0E0;
 margin-top: 8px;
 display: flex;
@@ -10,6 +11,14 @@ justify-content: center;
 
 .dropdown-options a{
   color: grey;
+}
+
+.positions {
+  background-color: #E0E0E0;
+  margin-top: 8px;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
 }
 
 /*      light colors         */
@@ -475,7 +484,6 @@ body > .navbar-collapse[data-color="purple"]:after {
   min-height: 100%;
 }
 .main-panel > .content {
-  padding: 30px 15px;
   min-height: calc(100% - 123px);
 }
 .main-panel > .footer {
